Update generated HTML file

--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
 <ul>
 <li>フローの作成手順のチュートリアル生成プラグイン</li>
 <li>フローのドキュメントを生成するプラグイン</li>
-<li>JavaScriptコードを生成できるfunctionノード</li>
+<li>JavaScriptのコードを生成できるfunctionノード</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-marpit-pagination="5" data-marpit-pagination-total="9" style="--paginate:true;">
@@ -72,7 +72,7 @@
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-paginate="true" data-marpit-pagination="6" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="vertical"><figure style="background-image:url(&quot;tutorial1.png&quot;);"></figure><figure style="background-image:url(&quot;tutorial2.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="6" data-paginate="true" data-marpit-pagination="6" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h1 id="%E3%83%95%E3%83%AD%E3%83%BC%E4%BD%9C%E6%88%90%E6%89%8B%E9%A0%86%E3%81%AE%E3%83%81%E3%83%A5%E3%83%BC%E3%83%88%E3%83%AA%E3%82%A2%E3%83%AB%E7%94%9F%E6%88%90%E3%83%97%E3%83%A9%E3%82%B0%E3%82%A4%E3%83%B3">フロー作成手順のチュートリアル生成プラグイン</h1>
-<p>開発したい物を入力すると、エディタ上で開発手順を教えてくれるプラグイン</p>
+<p>開発したい物を入力するとエディタ上で開発手順を教えてくれるプラグイン</p>
 <ul>
 <li>ダイアログに作りたい物を入力しChatGPTで作成手順を生成</li>
 <li>ツアー機能を用いて、作成手順をステップバイステップで説明</li>
@@ -89,7 +89,7 @@
 <p><a href="https://github.com/node-red-jp/node-red-contrib-plugin-chatgpt">https://github.com/node-red-jp/node-red-contrib-plugin-chatgpt</a></p>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-paginate="true" data-marpit-pagination="7" data-marpit-pagination-total="9" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-paginate="true" data-marpit-pagination="8" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="vertical"><figure style="background-image:url(&quot;function.png&quot;);background-size:630px auto;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="8" data-paginate="true" data-marpit-pagination="8" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
-<h1 id="javascript%E3%82%B3%E3%83%BC%E3%83%89%E3%82%92%E7%94%9F%E6%88%90%E3%81%A7%E3%81%8D%E3%82%8Bfunction%E3%83%8E%E3%83%BC%E3%83%89">JavaScriptコードを生成できるfunctionノード</h1>
+<h1 id="javascript%E3%81%AE%E3%82%B3%E3%83%BC%E3%83%89%E3%82%92%E7%94%9F%E6%88%90%E3%81%A7%E3%81%8D%E3%82%8Bfunction%E3%83%8E%E3%83%BC%E3%83%89">JavaScriptのコードを生成できるfunctionノード</h1>
 <p>functionノードの仕様に沿ったJavaScriptコードを生成するノード</p>
 <ul>
 <li>作成したい物を入力後、<br />「Ask ChatGPT」ボタンを押す</li>
@@ -99,7 +99,7 @@
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-paginate="true" data-marpit-pagination="8" data-marpit-pagination-total="9" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-paginate="true" data-marpit-pagination="9" data-marpit-pagination-total="9" style="--paginate:true;">
 <h2 id="%E6%84%9F%E6%83%B3">感想</h2>
-<p>ChatGPT活用により、初心者ユーザ、ITエンジニア、OTエンジニアの距離がより近くなった</p>
+<p>ChatGPT活用によって初心者ユーザ、ITエンジニア、OTエンジニアの距離が近くなった</p>
 <ul>
 <li>Node-REDの初心者ユーザが、自身でハンズオンできるように</li>
 <li>ITエンジニアは、分かりやすいドキュメントを提供できるように</li>
