--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
 <ul>
 <li>フローの作成手順のチュートリアル生成プラグイン</li>
 <li>フローのドキュメントを生成するプラグイン</li>
-<li>文章からJavaScriptコードを生成できるfunctionノード</li>
+<li>JavaScriptコードを生成できるfunctionノード</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-marpit-pagination="5" data-marpit-pagination-total="9" style="--paginate:true;">
@@ -89,8 +89,8 @@
 <p><a href="https://github.com/node-red-jp/node-red-contrib-plugin-chatgpt">https://github.com/node-red-jp/node-red-contrib-plugin-chatgpt</a></p>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-paginate="true" data-marpit-pagination="7" data-marpit-pagination-total="9" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-paginate="true" data-marpit-pagination="8" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="vertical"><figure style="background-image:url(&quot;function.png&quot;);background-size:630px auto;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="8" data-paginate="true" data-marpit-pagination="8" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
-<h1 id="%E6%96%87%E7%AB%A0%E3%81%8B%E3%82%89javascript%E3%82%B3%E3%83%BC%E3%83%89%E3%82%92%E7%94%9F%E6%88%90%E3%81%A7%E3%81%8D%E3%82%8Bfunction%E3%83%8E%E3%83%BC%E3%83%89">文章からJavaScriptコードを生成できるfunctionノード</h1>
-<p>functionノードの仕様に沿ったJavaScriptコードを生成するノード</p>
+<h1 id="javascript%E3%82%B3%E3%83%BC%E3%83%89%E3%82%92%E7%94%9F%E6%88%90%E3%81%A7%E3%81%8D%E3%82%8Bfunction%E3%83%8E%E3%83%BC%E3%83%89">JavaScriptコードを生成できるfunctionノード</h1>
+<p>文章からfunctionノードの仕様に沿ったJavaScriptコードを生成できるノード</p>
 <ul>
 <li>作成したい物を入力後、<br />「Ask ChatGPT」ボタンを押す</li>
 <li>ChatGPTが生成したJavaScript<br />コードを貼り付けてくれる</li>
