--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,7 @@
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-paginate="true" data-marpit-pagination="3" data-marpit-pagination-total="9" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-marpit-pagination="4" data-marpit-pagination-total="9" style="--paginate:true;">
 <h1 id="%E6%9C%AC%E6%97%A5%E3%81%AE%E5%86%85%E5%AE%B9">本日の内容</h1>
-<p>ChatGPT APIを活用したプラグインとノードを紹介</p>
+<p>フロー開発を簡単にできるプラグインとノードを紹介</p>
 <ul>
 <li>フローの作成手順のチュートリアル生成プラグイン</li>
 <li>フローのドキュメントを生成するプラグイン</li>
@@ -60,8 +60,7 @@
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-marpit-pagination="5" data-marpit-pagination-total="9" style="--paginate:true;">
-<h1 id="chatgpt%E3%81%A7%E3%81%A7%E3%81%8D%E3%82%8B%E3%81%93%E3%81%A8">ChatGPTでできること</h1>
-<p>Node-REDで活用できるChatGPTの機能</p>
+<h1 id="%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E7%89%88%E3%81%AEchatgpt%E3%81%A7%E3%81%A7%E3%81%8D%E3%82%8B%E3%81%93%E3%81%A8">ブラウザ版のChatGPTでできること</h1>
 <ul>
 <li>「作りたい物の説明文」から「フローのJSONデータ」を生成</li>
 <li>「作りたい物の説明文」から「フローの作成手順」を生成</li>
@@ -69,7 +68,7 @@
 <li>「フローのJSONデータ」から「Mermaid図」を生成</li>
 <li>「作りたい物の説明文」から「JavaScriptコード」を生成</li>
 </ul>
-<p>これら本機能をフローエディタ上で利用できるようにしたプラグインとノードを以降で紹介</p>
+<p>これら本機能をChatGPT APIを用いてフローエディタ上で<br />利用できるようにしたプラグインとカスタムノードを以降紹介</p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-paginate="true" data-marpit-pagination="6" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="vertical"><figure style="background-image:url(&quot;tutorial1.png&quot;);"></figure><figure style="background-image:url(&quot;tutorial2.png&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="6" data-paginate="true" data-marpit-pagination="6" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h1 id="%E3%83%95%E3%83%AD%E3%83%BC%E4%BD%9C%E6%88%90%E6%89%8B%E9%A0%86%E3%81%AE%E3%83%81%E3%83%A5%E3%83%BC%E3%83%88%E3%83%AA%E3%82%A2%E3%83%AB%E7%94%9F%E6%88%90%E3%83%97%E3%83%A9%E3%82%B0%E3%82%A4%E3%83%B3">フロー作成手順のチュートリアル生成プラグイン</h1>
