Update generated HTML file

--- a/index.htm
+++ b/index.htm
@@ -41,12 +41,12 @@
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-paginate="true" data-marpit-pagination="2" data-marpit-pagination-total="9" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-paginate="true" data-marpit-pagination="3" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;https://pbs.twimg.com/media/FplCZZnaUAcopKn?format=jpg&amp;name=large&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="3" data-paginate="true" data-marpit-pagination="3" data-marpit-pagination-total="9" style="--paginate:true;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h1 id="%E6%9C%88%E5%88%8Aio%E3%81%AE%E5%8D%8A%E5%B9%B4%E9%96%93%E3%81%AE%E9%80%A3%E8%BC%89%E3%82%92%E5%AE%8C%E8%B5%B0%E3%81%97%E3%81%BE%E3%81%97%E3%81%9F%F0%9F%8F%83%E2%80%8D%E2%99%80%EF%B8%8F%F0%9F%92%A8%F0%9F%93%9A">月刊I/Oの半年間の連載を完走しました<img class="emoji" draggable="false" alt="🏃‍♀️" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f3c3-200d-2640-fe0f.svg" data-marp-twemoji=""/><img class="emoji" draggable="false" alt="💨" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f4a8.svg" data-marp-twemoji=""/><img class="emoji" draggable="false" alt="📚" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f4da.svg" data-marp-twemoji=""/></h1>
 <ul>
-<li>3月号: プロジェクト機能の概要</li>
+<li>3月号: Git連携機能の概要</li>
 <li>4月号: プロジェクトの切り替え</li>
 <li>5月号: フローのバージョン管理</li>
 <li>6月号: GitHubへフローを共有</li>
 <li>7月号: GitHubからフローを取得</li>
-<li>8月号: フローをクラウド環境へ<br />　 　　デプロイ<br />
+<li>8月号: フローをクラウド環境で実行<br />
 </li>
 </ul>
 </section>
