Update generated HTML file

--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
 <li>5月号: フローのバージョン管理</li>
 <li>6月号: GitHubへフローを共有</li>
 <li>7月号: GitHubからフローを取得</li>
-<li>8月号: フローをクラウド環境で実行<br />
+<li>8月号: フローをクラウドで実行<br />
 </li>
 </ul>
 </section>
