Update generated HTML file

--- a/index.htm
+++ b/index.htm
@@ -98,10 +98,10 @@
 <p><a href="https://twitter.com/kazuhitoyokoi/status/1653720620839104512">https://twitter.com/kazuhitoyokoi/status/1653720620839104512</a></p>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-paginate="true" data-marpit-pagination="8" data-marpit-pagination-total="9" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-paginate="true" data-marpit-pagination="9" data-marpit-pagination-total="9" style="--paginate:true;">
-<h2 id="%E6%84%9F%E6%83%B3">感想</h2>
+<h2 id="%E6%9C%80%E5%BE%8C%E3%81%AB">最後に</h2>
 <p>ChatGPT活用によって初心者ユーザ、ITエンジニア、OTエンジニアの距離が近くなった</p>
 <ul>
-<li>Node-REDの初心者ユーザが、自身でハンズオンできるように</li>
+<li>Node-REDの初心者ユーザが自身で学び、IT/OTエンジニアになれるように</li>
 <li>ITエンジニアは、分かりやすいドキュメントを提供できるように</li>
 <li>ノーコード開発をしていたOTエンジニアが、ローコードの領域に踏み込めるように</li>
 </ul>
